src/test/ui/borrowck/issue-46471.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-46471.rs:3:5
   |
LL |     &x
   |     ^^ borrowed value does not live long enough
LL |
LL | }
   | -- borrow later used here
   | |
   | `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
